fixes nav on mobile and desktop

--- a/wp-content/themes/lowy/css/sass/_nav.scss
+++ b/wp-content/themes/lowy/css/sass/_nav.scss
@@ -14,7 +14,7 @@
                 &.sub-menu {
                     // display: none;
                     position: absolute;
-                    top: 1rem;
+                    top: 8rem;
                     left: 0;
                     opacity: 0;
                     transition: ease-in-out 0.33s all;
@@ -55,7 +55,7 @@
                 content: '';
                 position: absolute;
                 top: 1.5rem;
-                right: 0.5rem;
+                right: 2rem;
                 width: 2.4rem;
                 height: 2.4rem;
                 background-image: url('../img/icons/expand.svg');
@@ -84,28 +84,10 @@
 }
 
 .navbar {
-    padding: 5.5rem 0 1.5rem;
+    padding: 14rem 0 1.5rem;
     form {
-        position: relative;
-       input {
-           height: 4.4rem;
-           font-size: 1.4rem;
-           padding-right: 4.5rem;
-           position: relative;
-           
-       }
        button {
-           display: block;
-           &.search-icon-btn {
-            position: absolute;
-            right: 1.3rem;
-            top: 1.1rem;
-            height: 2.4rem;
-            width: 2.4rem;
-            padding: 0;
-            background-color: transparent;
-           }
-
+           
            &.btn--desktop {
                 background-color: $pale-orange;
                 position: absolute;
@@ -124,14 +106,17 @@
 }
 
 @media screen and (min-width: 576px) {
-    .navbar {
-        form {
-            .form-control {
-                display: block;
-                width: 100%;
+    .header__logo-wrap {
+            form {
+                .form-control {
+                    display: block;
+                    width: 100%;
+                }
+                button.search-icon-btn {
+                    top: 1.5rem;
+                }
             }
         }
-    }
 }
 
 @media screen and (min-width: 1024px) {
@@ -141,12 +126,17 @@
             min-width: 80rem;
             > li {
                 border-bottom: 0;
-                padding: 0 2rem;
-                //margin-right: 2rem;
+                padding: 0 2rem 0 1rem;
+                margin-right: 0.45rem;
                 font-weight: 400;
 
                 .sub-menu {
                     width: 22rem;
+                }
+                &.menu-item-news {
+                    .sub-menu {
+                        left: -50%;
+                    }
                 }
             }
         }
@@ -157,6 +147,7 @@
                 &:after {
                     background-image: url('../img/icons/chevron.svg');
                 }
+                
                 &.open-active {
                     &:after {
                         background-image: url('../img/icons/chevron.svg');
@@ -197,6 +188,12 @@
                         }
                         
                     }
+                    &.menu-item-news {
+
+                        .sub-menu {
+                            left: -50%;
+                        }
+                    }
                 }
                 &:after {
                     top: 0;
@@ -210,8 +207,9 @@
         form {
             min-height: 4.4rem;
             min-width: 3.7rem;
-            top: 1.5rem;
-            right: 1.5rem;
+            position: absolute;
+            top: 1.8rem;
+            right: -3rem;
             
             input.form-control {
                 position: absolute;
@@ -290,8 +288,14 @@
         &-nav {
             width: 100rem;
             > li {
+                padding: 0 2rem;
                 margin-right: 2rem;
             }
+        }
+    }
+    .navbar {
+        form {
+            right: 2rem;
         }
     }
 }
@@ -302,6 +306,11 @@
             > li {
                 margin-right: 4rem;
             }
+        }
+    }
+    .navbar {
+        form {
+            right: 4rem;
         }
     }
 }
